# Orders_API

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6d98f6c939be_create_orders_and_users_table.py
api/: orders.py  users.py
broker_msg/: consumer.py  producer.py
cache/: order_cache.py
celery_tasks/: tasks.py
core/: celery_app.py  config.py  dependencies.py  middleware.py  redis.py
database/: db.py  models.py
jwt_auth/: README.md  authjwt.py
repositories/: order_repository.py  user_repository.py
schemas/: order_schema.py  user_schema.py
services/: order_service.py  user_service.py
utils/: password.py
